--- a/frontend/src/components/home-page/style.css
+++ b/frontend/src/components/home-page/style.css
@@ -51,11 +51,8 @@
     grid-template-columns: 65% 35%;
 }
 
-.posts__wrapper {}
 
-.recomend__wrapper {
-    background-color: aqua;
-}
+.recomend__wrapper {}
 
 /* Post */
 .posts__wrapper {
@@ -64,9 +61,10 @@
 
 .create-post__wrapper {
     display: grid;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 1.25rem;
     margin-bottom: 5.625rem;
+    width: 90%;
 }
 
 .create-post__photo {
@@ -81,15 +79,16 @@
     line-height: normal;
     padding: 1.125rem 1.875rem 1.875rem 2.0625rem;
     resize: none;
+    border-radius: 0.9375rem;
 }
 
 /* Card-post */
 .card-post__wrapper {
     background-color: #fff;
-    width: 100%;
+    width: 90%;
     height: auto;
     box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.08);
-    /* margin-bottom: ; */
+    border-radius: 0.9375rem;
 }
 
 .card-profile__info {
@@ -152,5 +151,77 @@
 }
 
 .post-analytics {
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
+}
+
+/* Recomend */
+.recomend__people {
+    height: auto;
+    width: 26.5rem;
+    background-color: #fff;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.08);
+    margin: 4.375rem auto;
+    border-radius: 0.9375rem;
+}
+
+.recomend__people__title {
+    padding-top: 0.9375rem;
+    font-size: 1.25rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.recomend__card {
+    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.9375rem;
+}
+
+.recomend__card__item {
+    display: grid;
+    grid-template-columns: 80% 20%;
+    border: 0.0625rem solid #f3f3f3;
+    padding: 0.9375rem;
+    border-radius: 0.9375rem;
+    cursor: pointer;
+    align-items: center;
+
+}
+
+.recomend__card__user {
+    display: flex;
+    align-items: center;
+
+}
+
+.recomend__card__info {
+    margin: 0.1875rem 0.625rem 0 0.3125rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.3125rem;
+}
+
+.recomend__card__text {
+    font-size: 0.875rem;
+}
+
+.recomend__card__btn {
+    width: 4.625rem;
+    height: 2rem;
+    border: 0.0625rem solid #0BAACA;
+    border-radius: 0.25rem;
+    font-weight: 500;
+    color: #0BAACA;
+    float: right;
+}
+
+.recommend__card__link {
+    font-weight: 500;
+    color: #0BAACA;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 15px;
 }
