--- a/frontend/src/components/home-page/style.css
+++ b/frontend/src/components/home-page/style.css
@@ -1,5 +1,4 @@
 .header {
-    /* background-color: #f0f0f0; */
     padding: 0.625rem;
 }
 
@@ -22,7 +21,16 @@
 .page__link {
     color: #121212;
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 1.125rem;
+}
+
+.page__link--active::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #0BAACA;
+    margin-top: 5px;
 }
 
 .profile-list {
@@ -51,9 +59,6 @@
     grid-template-columns: 65% 35%;
 }
 
-
-.recommend__wrapper {}
-
 /* Post */
 .posts__wrapper {
     margin-top: 3.75rem;
@@ -61,7 +66,6 @@
 
 .create-post__wrapper {
     display: grid;
-    /* justify-content: center; */
     gap: 1.25rem;
     margin-bottom: 5.625rem;
     width: 90%;
@@ -75,7 +79,6 @@
     width: 45rem;
     height: 12rem;
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.08);
-    padding-top: 0.625rem;
     line-height: normal;
     padding: 1.125rem 1.875rem 1.875rem 2.0625rem;
     resize: none;
