--- a/frontend/src/components/events-page/style.css
+++ b/frontend/src/components/events-page/style.css
@@ -1,40 +1,48 @@
+.main-events {
+    width: 100%;
+    background-color: #f3f3f3;
+}
+
 .events__container {
     padding-top: 4.6875rem;
 }
 
 .search__events {
     display: flex;
-    margin: 0 auto;
-    justify-content: center;
+    justify-content: end;
+    margin-right: 1.25rem;
 }
 
 .search__event {
-    width: 15rem;
-    height: 3.125rem;
-    border: 1px solid gray;
-    border-radius: 0.3125rem;
-    padding: 0 1rem;
+    border: 0;
+    border-bottom: 2px solid gray;
+    outline: 0;
+    font-size: 1.3rem;
+    color: black;
+    padding: 7px 0;
+    background: transparent;
 }
 
 .find-events__btn {
     width: 7rem;
     background-color: #0BAACA;
     font-weight: 600;
+    transition: all 1s;
 }
 
 .find-events__btn:hover {
-    background-color: rgba(11, 170, 202, 0.45);
+    background-color: white;
+    color: black;
 }
 
 .events {
     display: grid;
     grid-template-columns: 450px 1fr;
+    gap: 15px;
+    padding: 2.125rem 0;
 }
 
 /*  Events general  */
-.events__general {
-    margin-top: 4.375rem;
-}
 
 .create__event {
     display: flex;
@@ -49,17 +57,20 @@
     font-size: 18px;
     font-weight: 600;
     color: #fff;
+    transition: all 1s;
 }
 
 .create__event__btn:hover {
-    background-color: rgba(11, 170, 202, 0.45);
+    background-color: rgb(255, 255, 255);
+    color: black;
 }
 
 .general__events {
-    margin-top: 2rem;
     background-color: #fff;
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.08);
     padding: 0.9375rem;
+    width: 90%;
+    margin: 3rem auto;
 }
 
 .general__title {
@@ -124,7 +135,7 @@
 
 .events__info {
     display: flex;
-    gap: 0.3125rem;
+    gap: 13px;
     flex-direction: column;
     margin-left: 0.625rem;
 }
@@ -143,4 +154,83 @@
 .events__info__link {
     font-size: 0.8125rem;
     color: #0BAACA;
+}
+
+/*  Events Card*/
+.events__card {
+    /*padding: 3.125rem 0 1.25rem 1.875rem;*/
+}
+
+.events__card__list {
+    display: grid;
+    grid-template-columns: 45% 45%;
+    gap: 3.4375rem
+}
+
+.events__card__item {
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.08);
+    max-width: 300px;
+}
+
+.events__card__information {
+    padding: 1.5rem 0.625rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.events__data {
+    font-weight: 600;
+}
+
+.events__card__status {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5.625rem;
+}
+
+.events__status__text {
+    background-color: #1C836D;
+    font-weight: 600;
+    padding: 0.5rem;
+    border-radius: 0.4375rem;
+}
+
+.events__info__time {
+    display: flex;
+}
+
+.events__info {
+    display: grid;
+    grid-template-columns: 55% 1fr;
+
+}
+
+.events__info__item {
+    display: flex;
+    align-items: center;
+    gap: 0.3125rem;
+}
+
+.events__img {
+    width: 100%;
+}
+
+
+.events__info__text {
+    color: gray;
+    font-weight: 600;
+}
+
+
+.events__button {
+    width: 16.375rem;
+    height: 3.25rem;
+    border: 2px solid #0BAACA;
+    font-size: 1.125rem;
+    font-weight: 600;
+    color: #0BAACA;
+    border-radius: 0.625rem;
 }
