--- a/frontend/src/components/login-page/style.css
+++ b/frontend/src/components/login-page/style.css
@@ -38,7 +38,6 @@
     align-self: stretch;
     border-radius: 0.3125rem;
     padding-left: 0.625rem;
-    box-shadow: 0rem 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
 }
 
 .input-login:focus {
@@ -67,6 +66,7 @@
 .login__page {
     width: 100%;
     background-image: url('../../assets/login/bg.jpg');
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.8);
     background-blend-mode: darken;
 }
@@ -121,7 +121,7 @@
 }
 
 .form__title {
-    color: var(--Black-900, #121212);
+    color: black;
     font-size: 2rem;
     font-style: normal;
     font-weight: 500;
@@ -134,7 +134,6 @@
     height: 2rem;
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
-    box-shadow: 0rem 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
     border-radius: 0.3125rem;
 }
 
