--- a/frontend/src/components/profile-page/style.css
+++ b/frontend/src/components/profile-page/style.css
@@ -1,7 +1,8 @@
 .profile-page {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #f3f3f3;
+    min-height: 890px;
 }
 
 .profile__header {
@@ -55,4 +56,24 @@
 .header__btn:hover {
     background-color: black;
     color: #fff;
+}
+
+.profile__info__wrapper {
+    height: auto;
+    box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.08);
+    background-color: #fff;
+}
+
+.profile__nav {
+    display: flex;
+    gap: 6.25rem;
+    align-items: center;
+    padding: 3.125rem 0;
+    justify-content: center;
+}
+
+.posts__content {
+    background-color: #fff;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.08);
+    margin: 0 auto;
 }
