--- a/frontend/src/components/home-page/style.css
+++ b/frontend/src/components/home-page/style.css
@@ -85,6 +85,18 @@
     border-radius: 0.9375rem;
 }
 
+.create__post__btn {
+    display: flex;
+    justify-content: center;
+    border: 1px solid;
+    border-radius: 0.9375rem;
+    padding: 1rem 4rem;
+    width: 5rem;
+    margin: 0 auto;
+    font-size: 1.125rem;
+    font-weight: 600;
+}
+
 /* Card-post */
 .card-post__wrapper {
     background-color: #fff;
