--- a/frontend/src/pages/home-page/style.css
+++ b/frontend/src/pages/home-page/style.css
@@ -65,14 +65,13 @@
 }
 
 .create-post__wrapper {
-    display: grid;
-    gap: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
     margin-bottom: 5.625rem;
     width: 90%;
-}
-
-.create-post__photo {
-    margin: auto;
+    justify-content: center;
+    align-items: center;
 }
 
 .create__post {
@@ -86,15 +85,22 @@
 }
 
 .create__post__btn {
-    display: flex;
-    justify-content: center;
-    border: 1px solid;
-    border-radius: 0.9375rem;
-    padding: 1rem 4rem;
-    width: 5rem;
+    border-radius: 8px;
+    padding: 16px 48px;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.08);
     margin: 0 auto;
     font-size: 1.125rem;
     font-weight: 600;
+    background-color: #ffffff;
+    transition: all 0.5s;
+}
+
+.create__post__btn:hover {
+    background-color: #e0e0e0;
+}
+
+.create__post__btn:active {
+    background-color: #919191;
 }
 
 /* Card-post */
@@ -112,7 +118,7 @@
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 8px;
 }
 
 .card-profile__info {
@@ -122,14 +128,14 @@
     gap: 8px
 }
 
-.card__info {
+.card-user__info {
     display: flex;
     flex-direction: column;
     gap: 6px;
 }
 
 .card-user__name {
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 600;
 }
 
@@ -137,13 +143,12 @@
     color: #807e7e;
 }
 
-.data__card {
+.card-user__data {
     color: #807e7e;
 }
 
 .card-post__text {
     color: #3E3E59;
-    margin-top: 16px;
     line-height: 1.5;
 }
 
@@ -153,11 +158,10 @@
 
 .card-post__img {
     display: flex;
-    padding: 1.5625rem 5rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.9375rem;
+    gap: 16px;
 }
 
 .post-analytics {
@@ -203,20 +207,22 @@
 }
 
 .recommend__card__item {
-    display: grid;
-    grid-template-columns: 80% 20%;
-    border: 0.0625rem solid #f3f3f3;
-    padding: 0.9375rem;
-    border-radius: 0.9375rem;
+    display: flex;
+    border: 1px solid #f3f3f3;
+    padding: 12px;
+    border-radius: 8px;
     cursor: pointer;
     align-items: center;
+    justify-content: space-between;
+}
 
+.recommend__card__item:hover {
+    background-color: #e0e0e0;
 }
 
 .recommend__card__user {
     display: flex;
     align-items: center;
-
 }
 
 .recommend__card__info {
