--- a/frontend/src/components/shared/style.css
+++ b/frontend/src/components/shared/style.css
@@ -1,4 +1,4 @@
-/*  Button*/
+/*  Buttons  */
 .authorization__btn {
     display: flex;
     justify-content: center;
@@ -13,6 +13,20 @@
 .authorization__btn:hover {
     background-color: #2e796a;
     color: rgb(145, 141, 141);
+}
+
+/*Primary button*/
+.primary__btn {
+    width: 4.625rem;
+    height: 2rem;
+    border: 0.0625rem solid #0BAACA;
+    border-radius: 0.25rem;
+    font-weight: 500;
+    color: #0BAACA;
+}
+
+.primary__btn:hover {
+    background-color: rgba(81, 216, 245, 0.2);
 }
 
 /*  Input   */
