1:Add comments and likes

--- a/frontend/src/components/cards/style.css
+++ b/frontend/src/components/cards/style.css
@@ -105,6 +105,12 @@
     gap: 5px;
 }
 
+.post-analytics__btn {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
 .post-create-comment__wrapper {
     width: 100%;
     height: auto;
